# tmuxctl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ace.toml
docs/: README.md  roadmap.md
docs/decisions/: 2026-06-18-container-test-strategy.md  2026-06-18-crate-name-license-and-shape.md  2026-06-18-lock-step-tmux-and-robustness.md  2026-06-18-sans-io-core-feature-gated-drivers.md  2026-06-21-target-tmux-3.6b-floats-out-of-scope.md  README.md
docs/guides/: README.md  cookbook.md  getting-started.md  reference.md  slice-loop.md  tmux-concepts.md
docs/notes/: 2026-06-18-session-resume.md  README.md
docs/reference/: README.md  tmux-source-map.md
docs/spec/: README.md  overview.md
scripts/: integration.sh  release.sh
src/: blocking.rs  commands.rs  engine.rs  error.rs  ids.rs  layout.rs  lib.rs  notification.rs  output.rs  parser.rs  smol_rt.rs  spawn.rs  tokio_rt.rs
tests/: integration.rs  transcript.rs
tests/fixtures/: structural-session.txt
