[package]
name = "tmuxctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "A bidirectional tmux control-mode (tmux -C) client: typed notification stream, command reply correlation, pane-output decoding, and layout-tree parsing."
repository = "https://github.com/ace-rs/tmuxctl"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tmux", "control-mode", "terminal", "multiplexer"]
categories = ["api-bindings", "parser-implementations"]

[features]
default = ["blocking"]
# Runtime drivers wrapping the sans-IO core. `blocking` is std-only (no extra deps);
# `tokio`/`smol` are opt-in behind their own optional deps, so the default build
# stays dependency-light.
blocking = []
tokio = ["dep:tokio"]
smol = ["dep:smol"]

[dependencies]
thiserror = "2"
tokio = { version = "1", optional = true, features = [
    "rt",
    "macros",
    "io-util",
    "process",
    "sync",
] }
smol = { version = "2", optional = true }

[profile.test]
debug = "line-tables-only"
